--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Snake</string>
     <string name="score">score</string>
     <string name="coins">coins</string>
+    <string name="left">left</string>
+    <string name="right">right</string>
+    <string name="up">up</string>
+    <string name="down">down</string>
+    <string name="description">How to control the snake</string>
 </resources>
